--- a/src/main/webapp/resources/js/ui/table.html
+++ b/src/main/webapp/resources/js/ui/table.html
@@ -1,5 +1,5 @@
 <table>
-  <tr ng-repeat="row in data">
+  <tr ng-repeat="row in rows">
     <td>{{ row.key }}</td>
     <td>{{ row.value }}</td>
   </tr>
