--- a/src/main/webapp/resources/js/nx/ui/table.html
+++ b/src/main/webapp/resources/js/nx/ui/table.html
@@ -1,6 +1,6 @@
 <table>
-  <tr ng-repeat="row in rows">
-    <td>{{ row.key }}</td>
-    <td>{{ row.value }}</td>
+  <tr ng-repeat="(key, value) in data">
+    <td>{{ key }}</td>
+    <td>{{ value }}</td>
   </tr>
 </table>
